// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipientsComponent /> renders with an array of recipients 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route>
    <RecipientsComponent
      recipients={
        Array [
          Object {
            "balance": 1000.25,
            "id": "abc123",
            "name": "Jimmy McNulty",
          },
          Object {
            "balance": 200,
            "id": "xyz789",
            "name": "Lester Freamon",
          },
        ]
      }
    />
  </Route>
</Router>
`;

exports[`<RecipientsComponent /> renders with empty recipient array 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route>
    <RecipientsComponent
      recipients={Array []}
    />
  </Route>
</Router>
`;
